--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -178,6 +178,7 @@ body {
     color: inherit;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     min-height: 100px;
 }
 
